@@ -4,7 +4,9 @@ Change log for zeit.web
 2.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- MAINT: Change `image_host` to `image_prefix` setting, which allows both a
+  path and a full URL prefix like ``http://image.example.com``, and doesn't
+  get confused by appserver ports.
 
 
 2.4 (2015-09-18)
